--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -10,6 +10,13 @@
 }
 
 table {
-  width:100% !important;
-  display: null !important;
+  margin: 0 !important;
+}
+
+.el-table {
+  table,
+  th,
+  td {
+    border: 0;
+  }
 }
