--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -18,5 +18,12 @@ table {
   th,
   td {
     border: 0;
+    
   }
+}
+
+.el-table {
+  tbody, tr {
+    background-color:#fff !important;
+  }  
 }
